# terminal-arcade

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
terminal_games/: __init__.py  app.py  theme.py
terminal_games/games/: __init__.py  protocol.py  registry.py
terminal_games/games/asteravoid/: model.py  screen.py
terminal_games/games/echo_chamber/: model.py  screen.py
terminal_games/games/floodgate/: model.py  screen.py
terminal_games/games/minefield/: model.py  screen.py
terminal_games/games/serpentine/: __init__.py  model.py  screen.py
terminal_games/games/starfall/: __init__.py  model.py  screen.py
terminal_games/games/tictactoe/: model.py  screen.py
terminal_games/screens/: __init__.py  menu.py
tests/: test_asteravoid.py  test_echo_chamber.py  test_floodgate.py  test_minefield.py  test_serpentine.py  test_shared.py  test_starfall.py  test_tictactoe.py
